--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WasteMeter - Measure Less, Save More</title>
+    <title>FoodMeter - Measure Less, Save More</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <style>
@@ -22,7 +22,7 @@
     <div class="min-h-screen flex flex-col">
         <header class="bg-white shadow-sm">
             <div class="max-w-6xl mx-auto px-4 py-3 flex justify-between items-center">
-                <img src="wasetmeter.jpg" alt="WasteMeter Logo" class="w-12 h-12 object-contain">
+                <img src="wasetmeter.jpg" alt="FoodMeter Logo" class="w-12 h-12 object-contain">
                 <nav class="hidden md:flex space-x-6 text-gray-600">
                     <a href="#features" class="hover:text-teal-600">Features</a>
                     <a href="#how-it-works" class="hover:text-teal-600">How It Works</a>
@@ -40,13 +40,13 @@
                             Measure Less,<br>Save More
                         </h1>
                         <p class="text-xl text-gray-600 mb-8">
-                            Use AI to track your household waste effortlessly. Save money while saving the planet.
+                            Use AI to track your household food effortlessly. Save money while saving the planet.
                         </p>
                         <form action="https://api.web3forms.com/submit" method="POST" class="space-y-4 max-w-md">
                             <input type="hidden" name="access_key" value="5262f0ab-61c7-426a-b01c-789cb7980352">
                             <input type="email" name="email" placeholder="Enter your email" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:border-teal-500 focus:ring-2 focus:ring-teal-200" required>
                             <input type="hidden" name="_next" value="https://your-success-page.url">
-                            <input type="hidden" name="_subject" value="New WasteMeter Waitlist Signup">
+                            <input type="hidden" name="_subject" value="New FoodMeter Waitlist Signup">
                             <input type="hidden" name="redirect" value="https://web3forms.com/success">
                             <button type="submit" class="w-full bg-teal-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-teal-700 transition-colors">
                                 Join the Waitlist
@@ -54,7 +54,7 @@
                         </form>                        
                     </div>
                     <div class="flex justify-center">
-                        <img src="wasetmeter.jpg" alt="WasteMeter Illustration" class="w-full max-w-md object-contain">
+                        <img src="wasetmeter.jpg" alt="FoodMeter Illustration" class="w-full max-w-md object-contain">
                     </div>
                 </div>
             </section>
@@ -93,7 +93,7 @@
                         <div class="text-center">
                             <div class="text-2xl font-bold text-teal-600 mb-4">2</div>
                             <h3 class="text-xl font-semibold mb-2">AI Processing</h3>
-                            <p class="text-gray-600">Our AI analyzes and categorizes your waste data</p>
+                            <p class="text-gray-600">Our AI analyzes and categorizes your food and waste data</p>
                         </div>
                         <div class="text-center">
                             <div class="text-2xl font-bold text-teal-600 mb-4">3</div>
@@ -108,11 +108,11 @@
             <section class="bg-teal-600 text-white py-16">
                 <div class="max-w-4xl mx-auto px-4 text-center">
                     <h2 class="text-3xl font-bold mb-6">Ready to Reduce Waste?</h2>
-                    <p class="text-xl mb-8">Join our waitlist and be the first to know when WasteMeter launches.</p>
+                    <p class="text-xl mb-8">Join our waitlist and be the first to know when FoodMeter launches.</p>
                       <form action="https://api.web3forms.com/submit" method="POST" class="max-w-md mx-auto space-y-4">
                         <input type="email" name="email" placeholder="Enter your email" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:border-teal-500 focus:ring-2 focus:ring-teal-200" required>
                         <input type="hidden" name="access_key" value="5262f0ab-61c7-426a-b01c-789cb7980352">
-                        <input type="hidden" name="_subject" value="New WasteMeter Waitlist Signup">
+                        <input type="hidden" name="_subject" value="New FoodMeter Waitlist Signup">
                         <input type="hidden" name="redirect" value="https://web3forms.com/success">
                         <button type="submit" class="w-full bg-teal-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-teal-700 transition-colors">
                             Join the Waitlist
@@ -125,7 +125,7 @@
             <div class="max-w-6xl mx-auto px-4">
                 <div class="grid md:grid-cols-4 gap-8">
                     <div>
-                        <h3 class="font-semibold mb-4">WasteMeter</h3>
+                        <h3 class="font-semibold mb-4">FoodMeter</h3>
                         <p class="text-gray-400">Turning waste into savings with AI</p>
                     </div>
                     <div>
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
-                    <p>&copy; 2025 WasteMeter. All rights reserved.</p>
+                    <p>&copy; 2025 FoodMeter. All rights reserved.</p>
                 </div>
             </div>
         </footer>
